# graphql-sample-rs

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2019-11-27-001836_create_users/: up.sql
migrations/2019-11-27-132324_create_tags/: up.sql
migrations/2019-11-27-151555_create_companies/: down.sql  up.sql
src/: graphql.rs  main.rs  models.rs  schema.graphql  schema.rs
